[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-mirror"
version = "0.1.0"
description = "Mirror and validate large Hugging Face model archives without using the default cache."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "coverage>=7.0",
]

[project.scripts]
model-mirror = "model_mirror.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["model_mirror"]

[tool.coverage.report]
fail_under = 100
show_missing = true
